--- a/src/styles.css
+++ b/src/styles.css
@@ -10,10 +10,13 @@ body {
 
 .navBar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    color: #fff;
+    flex-direction: row;
     padding: 1rem;
+    width: 100%;
+    height: 100%;
+    color: #fff;
 }
 
 .country-list{
